# star-scope

./: .dockerignore  .env.template  LICENSE  PROJECT.md  README.md  client.Caddyfile  client.Dockerfile  client.dockerignore  docker-full-app.yml  docker-local-db.yml  docker-local-dev.yml  justfile  swarm-prod-star-scope.yml  swarm-prod.yml
api/: .env  .env.template  (+4 more)
client/: .env.template  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Trunk.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
client/.cargo/: config
client/assets/lottie/: rocket.json
client/proto/: grpc
client/send-example/: package.json
client/send-example/components/: wallet.tsx
client/send-example/components/react/: wallet-connect.tsx
client/send-example/pages/: _app.tsx  index.tsx
client/src/: main.rs
client/src/components/: button.rs  images.rs  layout.rs  loading.rs  messages.rs  mod.rs  navigation.rs  search.rs  social_media.rs
client/src/config/: keys.rs  mod.rs  style.rs
client/src/pages/: mod.rs
client/src/pages/communication/: page.rs
client/src/pages/home/: page.rs
client/src/pages/login/: keplr_login.js  page.rs  wallet_connect_login.js
client/src/pages/notification_settings/: mod.rs  page.rs  queries.rs
client/src/pages/notifications/: page.rs
client/src/pages/overview/: page.rs
client/src/pages/settings/: page.rs
client/src/services/: auth.rs  grpc.rs
client/src/types/: protobuf.rs  types.rs
client/src/utils/: url.rs
client/webpack-bundler/: README.md  package-lock.json  package.json  webpack.config.js
client/webpack-bundler/src/: index.js
(+439 files in other folders)
