[package]
name = "star-scope-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
console_error_panic_hook = "0.1.7"
console_log = {version = "1.0.0", features = ["wasm-bindgen"] }
gloo-storage = "0.2.2"
gloo-timers = { version = "0.2.6", features = ["futures"] }
grpc-web-client = {git = "https://github.com/andoriyu/grpc-web-client.git"}
js-sys = "0.3.61"
jsonwebtoken = "8.3.0"
log = "0.4.17"
prost = { version = "0.11", default-features = false }
prost-types = "0.11.8"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde-wasm-bindgen = "0.5"
simple-error = "0.3.0"
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8"
tonic = { version = "0.9.1", default-features = false, features = ["codegen", "prost"] }
uuid = { version = "1.3.1", features = ["v4"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Storage", "StorageEvent", "Window", "Location", "HtmlSelectElement", "Navigator", "IntersectionObserver", "IntersectionObserverEntry", "HtmlDivElement", "Element", "MessageEvent", "Event"] }
chrono = "0.4.24"
enum-iterator = "1.4.1"
querystring = "1.1.0"
Inflector = "0.11.4"
urlencoding = "2.1.2"
gloo-events = "0.1.2"

[build-dependencies]
tonic-build = { version = "0.9.1", default-features = false, features = ["prost"] }
walkdir = "2.3.3"
prost-build = "0.11.9"
